fixed overlay area if content is too short

--- a/src/less/overlay.less
+++ b/src/less/overlay.less
@@ -138,7 +138,9 @@
 .uk-overlay-area-content {
     /* 1 */
     display: inline-block;
-    max-width: 100%;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
     vertical-align: middle;
     /* 2 */
     letter-spacing: normal;
